# pyfast

./: README.md  pyproject.toml
src/pyfast/: main.py
src/pyfast/db/: repo.py
src/test/: repo_test.py
tests/: repo_test.py
