[tool.poetry]
name = "pyfast"
version = "0.1.0"
description = ""
authors = ["Jack Lee <jack@uknow.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
